# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  justfile  railway.toml
.github/workflows/: general.yml
.sqlx/: query-18f0f6f2134a1c9683e3621401f746d7968f1b27eabd5399dea90a643682504f.json
config/: base.toml  local.toml  production.toml
http/: subscriptions_confirm.hurl  subscriptions_create.hurl
http/email_api/: local.env  test.hurl
migrations/: 20240115225204_create_subscriptions_table.sql  20250124043320_make_status_not_null_in_subscriptions.sql  20250124043747_create_subscription_tokens_table.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs  subscriptions_confirm.rs
