[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["http2"] }
config = "0.13.1"
serde = { version = "1", features = ["derive"] }
time = "0.3.31"
tokio = { version = "1.34.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["request-id", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-bunyan-formatter = "0.3"
uuid = { version = "1.6.1", default-features = false, features = ["serde", "v4"] }
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tower = "0.5.2"

[dependencies.sqlx]
version = "0.8.3"
default-features = false
features = [
	"runtime-tokio-rustls",
	"macros",
	"postgres",
	"uuid",
	"time",
	"migrate",
]

[dev-dependencies]
once_cell = "1.20.2"
reqwest = "0.11.22"
